--- a/Client/package.json
+++ b/Client/package.json
@@ -18,6 +18,7 @@
     "@types/mime": "^2.0.3",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.14",
+    "@types/uuid": "^8.3.4",
     "babel-loader": "^8.2.3",
     "css-loader": "^6.7.1",
     "file-loader": "^6.2.0",
@@ -34,6 +35,7 @@
   "dependencies": {
     "mime-types": "^2.1.35",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "uuid": "^8.3.2"
   }
 }
