--- a/Client/package.json
+++ b/Client/package.json
@@ -20,7 +20,9 @@
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.14",
     "@types/uuid": "^8.3.4",
+    "@types/webpack-env": "^1.18.0",
     "babel-loader": "^8.2.3",
+    "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.7.1",
     "dotenv": "^16.0.3",
     "dotenv-webpack": "^8.0.1",
@@ -30,17 +32,22 @@
     "style-loader": "^3.3.1",
     "ts-loader": "^9.2.7",
     "typescript": "^4.6.2",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "^4.1.1",
-    "webpack": "^5.70.0",
+    "webpack": "^5.74.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4",
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "bootstrap": "^5.2.2",
+    "firebase": "^9.12.0",
     "mime-types": "^2.1.35",
     "node-polyfill-webpack-plugin": "^2.0.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.4.2",
     "uuid": "^8.3.2"
   }
 }
