--- a/Client/package.json
+++ b/Client/package.json
@@ -40,8 +40,10 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.1",
     "bootstrap": "^5.2.2",
     "firebase": "^9.12.0",
+    "graphql": "^16.6.0",
     "mime-types": "^2.1.35",
     "node-polyfill-webpack-plugin": "^2.0.1",
     "react": "^17.0.2",
